--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -12,17 +12,21 @@
     />
   </head>
   <body style="background: #f1f7fb">
-    <!-- Login form ------------------------------------------------- -->
-    <div class="container py-5" style="max-width: 560px">
-      <form class="card p-3 shadow-sm p-3 mb-5 rounded">
+    <!-- signup form ------------------------------------------------- -->
+    <div class="container py-5" style="max-width: 380px">
+      <form
+        id="signup-form"
+        method="POST"
+        class="card p-3 shadow-sm p-3 mb-5 rounded"
+      >
         <h2 class="p-2 text-center pb-3">Sign Up</h2>
         <hr />
         <div class="mb-3">
           <label for="Name" class="form-label">Name</label>
           <input
+            id="userName"
             type="text"
             class="form-control"
-            id="exampleInputEmail1"
             aria-describedby="emailHelp"
           />
         </div>
@@ -31,26 +35,24 @@
             >Email address</label
           >
           <input
+            id="userEmail"
             type="email"
             class="form-control"
-            id="exampleInputEmail1"
             aria-describedby="emailHelp"
           />
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="exampleInputPassword1"
-          />
+          <input id="userPassword" type="password" class="form-control" />
         </div>
-        <button type="submit" class="btn btn-primary">Sign Up</button>
-        <button type="submit" class="btn btn-outline-primary mt-2">
+        <button type="submit" class="btn btn-primary mt-3">Sign Up</button>
+        <button type="submit" class="btn btn-default mt-2 text-primary">
           Already Have Account Log In ?
         </button>
       </form>
     </div>
-    <!-- ------------------------------------------------------------------------------ -->
+    <!-- SCRIPT ------------------------------------------------------------------------------ -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../app.js"></script>
   </body>
 </html>
