--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body class="bg-body-tertiary">
+    <!-- main -------------------------------------------------------- -->
+
+    <div class="conatainer p-1 p-md-5">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card p-3 sticky-top">
+            <form id="addExpenseFrom" action="" class="form">
+              <h3>Add Expense</h3>
+              <label class="form-label mt-4" for="name">Amount:</label>
+              <input
+                id="amount"
+                class="form-control p-2"
+                type="number"
+                name="name"
+              />
+              <label class="form-label mt-4" for="email">Categoris:</label>
+              <select id="category" class="form-select p-2">
+                <option selected value="Electronics">Electronics</option>
+                <option value="Food">Food</option>
+                <option value="Skin Care">Skin Care</option>
+              </select>
+
+              <label class="form-label mt-4" for="email">Description</label>
+              <input
+                id="description"
+                class="form-control"
+                type="text"
+                name="description"
+              />
+              <input
+                type="submit"
+                class="btn bg-dark text-white mt-3 w-100 fw-semibold p-3"
+                value="SUBMIT"
+              />
+            </form>
+          </div>
+        </div>
+
+        <!-- ============================================================ -->
+
+        <div class="col-md-9 card">
+          <table class="table table">
+            <thead>
+              <tr>
+                <th scope="col">Amount</th>
+                <th scope="col">Description</th>
+                <th scope="col">Category</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
+              </tr>
+            </thead>
+            <tbody id="expenseTable">
+              <tr>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdosfvnkejvkje vkj</td>
+                <td><button class="btn btn-outline-dark">Edit</button></td>
+                <td><button class="btn btn-outline-danger">Delete</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <!-- -------------------------------------------------------------------- -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <script src="./js/expense.js"></script>
+  </body>
 </html>
