--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -67,6 +67,6 @@
     </div>
     <!-- SCRIPT ------------------------------------------------------------------------------ -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../app.js"></script>
+    <script src="../js/signup.js"></script>
   </body>
 </html>
