--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -52,7 +52,7 @@
           Log in
         </button>
         <button class="btn btn-default mt-2 text-dark-subtle">
-          Don't have an account Sign In ?
+          <a href="./signup.html"> Don't have an account Sign In ?</a>
         </button>
       </form>
     </div>
