--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -61,7 +61,7 @@
           Sign Up
         </button>
         <button class="btn btn-default mt-2 text-dark-subtle">
-          Already Have Account Log In ?
+          <a href="./login.html"> Already Have Account Log In ?</a>
         </button>
       </form>
     </div>
