--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,14 +10,168 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </head>
+  <style>
+    .proBtn {
+      border-radius: 9px 0px;
+      box-sizing: border-box;
+      color: #ffffff;
+      cursor: pointer;
+      font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
+        NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
+        EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto,
+        "Helvetica Neue", "Noto Sans", sans-serif;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 24px;
+      opacity: 1;
+      outline: 0 solid transparent;
+      padding: 8px 18px;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      width: fit-content;
+      word-break: break-word;
+      border: 0;
+    }
+
+    /* CSS */
+    .buyProBtn {
+      padding: 0.6em 2em;
+      border: none;
+      outline: none;
+      color: rgb(255, 255, 255);
+      background: #111;
+      cursor: pointer;
+      position: relative;
+      z-index: 0;
+      border-radius: 10px;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
+
+    .buyProBtn:before {
+      content: "";
+      background: linear-gradient(
+        45deg,
+        #ff0000,
+        #ff7300,
+        #fffb00,
+        #48ff00,
+        #00ffd5,
+        #002bff,
+        #7a00ff,
+        #ff00c8,
+        #ff0000
+      );
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      background-size: 400%;
+      z-index: -1;
+      filter: blur(5px);
+      -webkit-filter: blur(5px);
+      width: calc(100% + 4px);
+      height: calc(100% + 4px);
+      animation: glowing-button-85 20s linear infinite;
+      transition: opacity 0.3s ease-in-out;
+      border-radius: 10px;
+    }
+
+    @keyframes glowing-button-85 {
+      0% {
+        background-position: 0 0;
+      }
+      50% {
+        background-position: 400% 0;
+      }
+      100% {
+        background-position: 0 0;
+      }
+    }
+
+    .buyProBtn:after {
+      z-index: -1;
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #222;
+      left: 0;
+      top: 0;
+      border-radius: 10px;
+    }
+  </style>
   <body class="bg-body-tertiary">
+    <!-- Navbar --------------------------------------- -->
+    <nav class="navbar navbar-expand-lg bg-white text-white shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold" href="#"
+          ><div>
+            <b style="letter-spacing: 0.3rem">ExpenseTracker</b>
+            <p
+              id="premiumMessage"
+              class="proBtn text-dark px-5 py-0"
+              style="
+                display: none;
+                background: #ffd621;
+                box-shadow: #b78f2d 0 6px 10px -10px;
+                font-size: x-small;
+                font-style: italic;
+                letter-spacing: 0.5rem;
+              "
+            >
+              ⭐ PRO
+            </p>
+          </div>
+        </a>
+
+        <div class="navbar" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./pages/login.html"
+                ><button class="btn btn-dark text-white" type="submit">
+                  Leaderboard
+                </button></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./pages/login.html"
+                ><button class="btn btn-danger text-white" type="submit">
+                  Log Out
+                </button></a
+              >
+            </li>
+          </ul>
+          <div id="buyBtnWrapper">
+            <button
+              id="rzp-button1"
+              style="display: none"
+              class="buyProBtn"
+              type="submit"
+            >
+              Buy Premium
+            </button>
+          </div>
+
+          <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+        </div>
+      </div>
+    </nav>
+
     <!-- main -------------------------------------------------------- -->
 
     <div class="conatainer p-1 p-md-5">
       <div class="row">
         <div class="col-md-3">
-          <div class="card p-3 sticky-top">
+          <div class="card p-3">
             <form id="addExpenseFrom" action="" class="form">
               <h5 id="displayUserName"></h5>
               <h3>Add Expense</h3>
@@ -55,7 +209,7 @@
 
         <div class="col-md-9">
           <table class="table table">
-            <thead class="sticky-top shadow-sm rounded">
+            <thead class="shadow-sm rounded">
               <tr>
                 <th class="p-3 bg-dark mt-3 text-white" scope="col">Amount</th>
                 <th class="p-3 bg-dark mt-3 text-white" scope="col">
@@ -82,9 +236,30 @@
       </div>
     </div>
 
+    <!-- Leader Board ================================================= -->
+
+    <div class="container my-3 mb-5">
+      <div class="p-4 shadow-sm fw-bold bg-dark text-white">Leaderboard</div>
+
+      <ul id="LeaderboardList" class="list-group">
+        <!-- <li
+          class="list-group-item p-3 d-flex justify-content-between align-items-center fw-semibold"
+        >
+          Name
+          <span
+            class="badge bg-warning-subtle p-1 px-4 text-dark rounded-pill fs-6"
+            >14</span
+          >
+        </li> -->
+      </ul>
+    </div>
+
+    <!-- footer-------------------------------------------- -->
+    <div class="bg-dark-subtle" style="height: 200px"></div>
+
     <!-- -------------------------------------------------------------------- -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+    <script src="./js/leaderboard.js"></script>
     <script src="./js/expense.js"></script>
   </body>
 </html>
