sequelize transaction added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,16 +135,16 @@
         <div class="navbar" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
           <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link text-white" href="./pages/login.html"
                 ><button class="btn btn-dark text-white" type="submit">
                   Leaderboard
                 </button></a
               >
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link text-white" href="./pages/login.html"
-                ><button class="btn btn-danger text-white" type="submit">
+                ><button class="btn btn-outline-danger" type="submit">
                   Log Out
                 </button></a
               >
