--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body class="bg-body-tertiary">
-    <!-- signup form ------------------------------------------------- -->
+    <!-- login form ------------------------------------------------- -->
     <div class="container py-5" style="max-width: 380px">
       <form
         id="login-form"
@@ -48,11 +48,57 @@
             required
           />
         </div>
+        <div class="d-flex justify-content-end">
+          <button
+            id="forgotPassoword"
+            class="btn btn-default mt-0 p-0 mb-3 text-dark-subtle fw-medium"
+          >
+            Forgot Password ?
+          </button>
+        </div>
+
         <button type="submit" class="btn btn-dark mt-3 text-uppercase">
           Log in
         </button>
         <button class="btn btn-default mt-2 text-dark-subtle">
           <a href="./signup.html"> Don't have an account Sign In ?</a>
+        </button>
+      </form>
+    </div>
+
+    <!-- =============================================================================================== -->
+
+    <!-- signup form ------------------------------------------------- -->
+    <div class="container py-5" style="max-width: 380px">
+      <form
+        id="resetPassword-form"
+        method="POST"
+        class="card p-3 shadow-sm p-3 mb-5 rounded"
+        style="display: none"
+      >
+        <h2 class="p-2 text-center pb-3 text-uppercase">Reset Password</h2>
+
+        <!-- Toast -------------------- -->
+        <div id="message-box"></div>
+        <!-- ======================== -->
+
+        <hr />
+
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label"
+            >Email address</label
+          >
+          <input
+            id="resetEmail"
+            type="email"
+            class="form-control"
+            name="resetEmail"
+            required
+          />
+        </div>
+
+        <button type="submit" class="btn w-100 btn-dark mt-3 text-uppercase">
+          Reset Password
         </button>
       </form>
     </div>
