--- a/frontend/index.html
+++ b/frontend/index.html
@@ -203,23 +203,74 @@
               />
             </form>
           </div>
+
+          <!-- Leader Board ================================================= -->
+
+          <div class="my-5">
+            <div class="p-4 shadow-sm fw-bold bg-dark text-white">
+              Leaderboard
+            </div>
+
+            <ul id="LeaderboardList" class="list-group"></ul>
+          </div>
         </div>
 
         <!-- ============================================================ -->
 
         <div class="col-md-9">
-          <table class="table table">
+          <div class="filterWrapper bg-dark p-2 d-flex">
+            <h5
+              id="filterHeading"
+              class="text-white flex-grow-1 align-items-center p-2"
+            >
+              All Expenses
+            </h5>
+            <div class="dropdown pt-1">
+              <button
+                class="btn bg-success-subtle px-4 fw-medium text-success"
+                type="button"
+              >
+                Download
+              </button>
+              <button
+                class="btn bg-warning-subtle px-4 dropdown-toggle fw-medium"
+                type="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Filter
+              </button>
+              <ul class="dropdown-menu">
+                <li id="dailyFilter">
+                  <a class="dropdown-item" href="#">Daily</a>
+                </li>
+                <li id="monthlyFilter">
+                  <a class="dropdown-item" href="#">Monthly</a>
+                </li>
+                <li id="yearlyFilter">
+                  <a class="dropdown-item" href="#">Yearly</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <table class="table">
             <thead class="shadow-sm rounded">
               <tr>
-                <th class="p-3 bg-dark mt-3 text-white" scope="col">Amount</th>
-                <th class="p-3 bg-dark mt-3 text-white" scope="col">
+                <th class="p-3 bg-dark-subtle mt-3 text-dark" scope="col">
+                  Amount
+                </th>
+                <th class="p-3 bg-dark-subtle mt-3 text-dark" scope="col">
                   Description
                 </th>
-                <th class="p-3 bg-dark mt-3 text-white" scope="col">
+                <th class="p-3 bg-dark-subtle mt-3 text-dark" scope="col">
                   Category
                 </th>
-                <th class="p-3 bg-dark mt-3 text-white" scope="col">Edit</th>
-                <th class="p-3 bg-dark mt-3 text-white" scope="col">Delete</th>
+                <th class="p-3 bg-dark-subtle mt-3 text-dark" scope="col">
+                  Edit
+                </th>
+                <th class="p-3 bg-dark-subtle mt-3 text-dark" scope="col">
+                  Delete
+                </th>
               </tr>
             </thead>
             <tbody id="expenseTable">
@@ -234,24 +285,6 @@
           </table>
         </div>
       </div>
-    </div>
-
-    <!-- Leader Board ================================================= -->
-
-    <div class="container my-3 mb-5">
-      <div class="p-4 shadow-sm fw-bold bg-dark text-white">Leaderboard</div>
-
-      <ul id="LeaderboardList" class="list-group">
-        <!-- <li
-          class="list-group-item p-3 d-flex justify-content-between align-items-center fw-semibold"
-        >
-          Name
-          <span
-            class="badge bg-warning-subtle p-1 px-4 text-dark rounded-pill fs-6"
-            >14</span
-          >
-        </li> -->
-      </ul>
     </div>
 
     <!-- footer-------------------------------------------- -->
