--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -79,7 +79,7 @@
         <h2 class="p-2 text-center pb-3 text-uppercase">Reset Password</h2>
 
         <!-- Toast -------------------- -->
-        <div id="message-box"></div>
+        <div id="reset-message-box"></div>
         <!-- ======================== -->
 
         <hr />
