Report Generation Backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -227,6 +227,7 @@
             </h5>
             <div class="dropdown pt-1">
               <button
+                id="download"
                 class="btn bg-success-subtle px-4 fw-medium text-success"
                 type="button"
               >
