--- a/frontend/index.html
+++ b/frontend/index.html
@@ -252,6 +252,28 @@
                   <a class="dropdown-item" href="#">Yearly</a>
                 </li>
               </ul>
+
+              <!-- Row Number --------------------------- -->
+              <button
+                class="btn bg-white px-4 dropdown-toggle fw-medium"
+                type="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Rows
+              </button>
+              <ul class="dropdown-menu">
+                <li id="row1">
+                  <a class="dropdown-item" href="#">5</a>
+                </li>
+                <li id="row2">
+                  <a class="dropdown-item" href="#">10</a>
+                </li>
+                <li id="row3">
+                  <a class="dropdown-item" href="#">15</a>
+                </li>
+              </ul>
+              <!-- EndRow Number --------------------------- -->
             </div>
           </div>
           <table class="table">
@@ -284,6 +306,12 @@
               </tr> -->
             </tbody>
           </table>
+
+          <!-- pagination -->
+          <div
+            id="pagination"
+            class="d-flex justify-content-center bg-white"
+          ></div>
         </div>
       </div>
     </div>
