--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -144,7 +144,7 @@
               >
             </li> -->
             <li class="nav-item">
-              <a class="nav-link text-white" href="./pages/login.html"
+              <a class="nav-link text-white" href="./login/login.html"
                 ><button
                   class="btn bg-danger-subtle text-danger fw-medium"
                   type="submit"
