--- a/backend/frontend/login/login.html
+++ b/backend/frontend/login/login.html
@@ -104,6 +104,6 @@
     </div>
     <!-- SCRIPT ------------------------------------------------------------------------------ -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/login.js"></script>
+    <script src="./login.js"></script>
   </body>
 </html>
