signup bug fixed

--- a/backend/frontend/signup/signup.html
+++ b/backend/frontend/signup/signup.html
@@ -61,12 +61,12 @@
           Sign Up
         </button>
         <button class="btn btn-default mt-2 text-dark-subtle">
-          <a href="./login.html"> Already Have Account Log In ?</a>
+          <a href="../login/login.html"> Already Have Account Log In ?</a>
         </button>
       </form>
     </div>
     <!-- SCRIPT ------------------------------------------------------------------------------ -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/signup.js"></script>
+    <script src="./signup.js"></script>
   </body>
 </html>
